--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.25-alpine
+        image: nginxinc/nginx-unprivileged:1.25-alpine
         ports:
-        - containerPort: 80
+        - containerPort: 8080
           name: http
         resources:
           requests:
